<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.pg.crm.ui.login.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        tools:context=".ui.login.LoginActivity">


        <androidx.cardview.widget.CardView
            android:id="@+id/ly_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_margin="@dimen/_15sdp"
            android:elevation="@dimen/_5sdp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="parent">




                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toTopOf="@+id/ly_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ly_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10ssp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/App_TextViewLableStyle_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:hint="@string/prompt_username"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=""
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/App_TextViewLableStyle_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"

                        android:hint="@string/prompt_password"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint=""
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                         android:backgroundTint="@color/colorPrimaryDark"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginBT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/m_lato_bold"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/white"
                    android:layout_margin="20dp"
                    app:cornerRadius="10dp"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ly_login" />

                <TextView
                    android:id="@+id/forgetpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/m_lato_bold"
                    android:text="Forgot Password?"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginBT" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/m_lato_bold"
            android:text="Powered by @ P &amp; G Enterprise Software Services"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_7sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>